--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
 	padding: 10px 20px 10px 30px;
 }
 
+.connectme {
+    text-align: center;
+}
+
 .work img {
     width: 100%;
     border: 0 none;
